# spelunky-ds

./: .Makefile.swp  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  README_BACKUP_18615.md  README_LOCAL_18811.md  README_REMOTE_19335.md  make.test  regex.py  sounds.nds  sounds_no_exp.nds  spelunky-ds.nds  spelunkyds.elf  spelunkyds.nds
gfx/_not_used/fonts/: font.grit
gfx/_not_used/sprites/: sprite.grit
gfx/fonts/: font.grit
gfx/icon/: readme.txt
gfx/sprites/: sprite.grit
gfx/sprites/32x32/: sprite.grit
gfx/sprites/64x64/: sprite.grit
gfx/sprites/8x8/: sprite.grit
gfx/tilemaps/working/: tilemap.grit
includes/: TextBackgrounds.h
notes/: notes.txt
scratches/: template.c
source/: BaseMap.hpp  Consts.h  GameLoop.cpp  GameLoop.h  GameLoop.hpp  GameState.cpp  GameState.hpp  Globals.h  GlobalsDeclarations.hpp  GlobalsDefinitions.cpp  GlobalsDefinitions.hpp  Main.cpp  base_map.hpp  game_loop.cpp  game_loop.h  game_loop.hpp  global_definitions.cpp  globals_declarations.h  globals_declarations.hpp  globals_definitions.cpp  globals_definitions.h  globals_definitions.hpp  main.cpp  todo.txt
source/animations/: Bat.cpp  Bat.h  Blood.cpp  Blood.h  BloodElement.cpp  BloodElement.h  Bomb.cpp  Bomb.h  Camera.cpp  Camera.h  Collisions.cpp  Collisions.h  Copyrights.cpp  Copyrights.h  Jar.cpp  Jar.h  MainDude.cpp  MainDude.h  Moniez.cpp  Moniez.h  OAMManager.cpp  OAMManager.h  Rock.cpp  Rock.h  Rope.cpp  Rope.h  RopeElement.cpp  RopeElement.h  Snake.cpp  Snake.h  SpelunkyTitle.cpp  SpelunkyTitle.h  Spider.cpp  Spider.h  SpriteState.h  TitleMenuSign.cpp  TitleMenuSign.h
source/camera/: Camera.cpp  Camera.h  Camera.hpp  LayerLevel.hpp  camera.cpp  camera.h  layer_level.h
source/collisions/: Collisions.cpp  Collisions.h  Collisions.hpp  collisions.cpp  collisions.h  collisions.hpp
source/console/: ConsoleUtils.hpp  TextManager.cpp  TextManager.h  console_utils.h  console_utils.hpp  text_manager.cpp  text_manager.h  todo.txt
source/creatures/: CreatureType.hpp  Orientation.hpp  SpriteInfo.h  _BaseCreature.cpp  _BaseCreature.h  _base_creature.cpp  _base_creature.h  menu_sign_type.hpp  shopping_object.cpp  shopping_object.h  simple_sprite_wrapper.h  sprite_info.h  sprite_utils.cpp  sprite_utils.hpp  spritesheet_type.hpp
source/decorations/: ArchSign.cpp  ArchSign.h  ArrowTrap.cpp  ArrowTrap.h  Blast.cpp  Blast.hpp  Copyrights.cpp  Copyrights.h  GotCollectible.cpp  GotCollectible.hpp  Lamp.cpp  Lamp.h  RockSign.cpp  RockSign.h  RopeElement.cpp  RopeElement.hpp  ShoppingIcon.cpp  ShoppingIcon.h  Smooch.cpp  Smooch.hpp  SpelunkyTitle.cpp  SpelunkyTitle.h  _base_decoration.cpp  _base_decoration.h  arch_sign.cpp  arch_sign.h  arrow_trap.cpp  arrow_trap.h  blast.cpp  blast.hpp  copyrights.cpp  copyrights.h  got_collectible.cpp  got_collectible.hpp  lamp.cpp  lamp.h  rock_sign.cpp  rock_sign.h  shopping_icon.cpp  shopping_icon.h  (+4 more)
source/entities/: _BaseCreature.cpp  _BaseCreature.h
source/graphics/: Brightness.cpp  Brightness.hpp  OamManager.cpp  OamManager.hpp  OamType.hpp  OamUtils.cpp  OamUtils.hpp  SpriteInfo.cpp  SpritesheetType.hpp
source/hud/: Hud.cpp  Hud.h  Hud.hpp  hud.cpp  hud.h  hud.hpp
source/input/: InputHandler.cpp  InputHandler.h  InputHandler.hpp  input_handler.cpp  input_handler.h  touchUtils.h
source/interfaces/: IBase.cpp  IBase.h  ICollidable.cpp  ICollidable.h  IMovable.cpp  IMovable.h  IPickupable.cpp  IPickupable.h  IRenderable.cpp  IRenderable.h  Moniez.hpp  ShoppingObject.cpp  ShoppingObject.h  shopping_object.cpp  shopping_object.h
source/level_layout/: BaseCaveMap.h  GameLoop.cpp  GameLoop.h  LevelGenerator.cpp  LevelGenerator.h  MapTile.cpp  MapTile.h  MapTileType.h  MapUtils.cpp  MapUtils.h  ScreenPositions.h  Scrolling.cpp  Scrolling.h  SpriteInfo.cpp  SpriteInfo.h  TileOrientation.h
source/math/: Math.cpp  Math.hpp
source/memory/: OAMManager.h  OamManager.cpp  OamManager.hpp  OamUtils.cpp  oam_manager.cpp  oam_manager.h  oam_manager.hpp  oam_type.h  oam_utils.cpp  oam_utils.h
source/preprocessor/: Debug.h
source/rooms/: ClosedRooms.hpp  EntranceRooms.hpp  ExitRooms.h  ExitRooms.hpp  LeftRightDownRooms.hpp  LeftRightRooms.h  LeftRightRooms.hpp  LeftRightUpRooms.hpp  RoomType.hpp  ShopRooms.hpp  SplashScreenRooms.hpp  closed_rooms.h  closed_rooms.hpp  entrance_rooms.h  entrance_rooms.hpp  exit_rooms.h  exit_rooms.hpp  left_right_down_rooms.h  left_right_down_rooms.hpp  left_right_rooms.h  left_right_rooms.hpp  left_right_up_rooms.h  left_right_up_rooms.hpp  room_type.h  room_type.hpp  shops.h  splash_screens.hpp
source/sound/: Sound.cpp  Sound.hpp  SoundUtils.cpp  SoundUtils.hpp  sound_utils.cpp  sound_utils.h  sound_utils.hpp
source/sprites/: MenuSignType.h  MovingObject.cpp  MovingObject.h  SpriteInfo.cpp  SpriteInfo.h  SpriteType.h  SpriteTypes.h  menu_sign_type.h  moving_object.cpp  moving_object.h  shopping_object.cpp  shopping_object.h  simple_sprite_wrapper.cpp  simple_sprite_wrapper.h  sprite_info.cpp  sprite_info.h  sprite_state.h  sprite_state.hpp  sprite_type.h  sprite_type.hpp  sprite_utils.cpp  sprite_utils.h  sprite_utils.hpp  spritesheet_type.h
source/tiles/: BaseCaveMap.h  BaseMap.hpp  Direction.hpp  Level.cpp  Level.hpp  LevelGenerator.cpp  LevelGenerator.hpp  LevelRenderer.cpp  LevelRenderer.hpp  LevelRenderingUtils.cpp  MapTile.cpp  MapTile.hpp  MapTileType.h  MapTileType.hpp  MapUtils.cpp  MapUtils.h  PopulatingUtils.cpp  PopulatingUtils.hpp  SplashScreenType.hpp  direction.h  direction.hpp  level.cpp  level.h  level.hpp  level_generator.cpp  level_generator.h  level_generator.hpp  level_rendering_utils.cpp  level_rendering_utils.h  map_tile.cpp  map_tile.h  map_tile.hpp  map_tile_type.h  map_tile_type.hpp  map_utils.cpp  populating_utils.cpp  screen_positions.h  splash_screen_type.h  tile_orientation.h
source/time/: TimeUtils.cpp  Timer.cpp  Timer.h  time_utils.cpp  time_utils.h  timer.cpp
source/touch/: touchUtils.h
source/treasures/: BaseTreasure.cpp  BaseTreasure.h
utils/: Generator.java  Main.java
utils/mappy_files/: cavebg_mappywin32.FMP  cavebg_mappywin32.TXT
(+535 files in other folders)
