# That file is here only to make IDE's happy so they could index all source files.
# Real building happens through Makefile.

cmake_minimum_required(VERSION 3.9)
project(spelunkyds)

set(CMAKE_CXX_STANDARD 14)

# Set to your devkitPro's installation dir if environment variable does not exist.
set(DEVKITPRO $ENV{DEVKITPRO})

include_directories(${DEVKITPRO}/libnds/lib)
include_directories(${DEVKITPRO}/libnds/include)
include_directories(${DEVKITPRO}/libnds/include/nds)
include_directories(${DEVKITPRO}/libnds/include/nds/arm9)
include_directories(${DEVKITPRO}/devkitARM)

link_directories(${DEVKITPRO}/libnds/lib)
link_directories(${DEVKITPRO}/libnds/include)
link_directories(${DEVKITPRO}/libnds/include/nds)
link_directories(${DEVKITPRO}/libnds/include/nds/arm9)

add_executable(spelunkyds
        gfx/fonts/font.grit
        gfx/sprites/16x16/sprite.grit
        source/decorations/_BaseDecoration.h
        source/entities/main_dude/MainDude.cpp
        source/entities/main_dude/MainDude.hpp
        source/entities/items/Bomb.cpp
        source/entities/items/Rock.cpp
        source/entities/items/Arrow.cpp
        source/entities/items/Bomb.hpp
        source/entities/items/Rope.hpp
        source/decorations/Copyrights.cpp
        source/decorations/Copyrights.h
        source/decorations/RopeElement.hpp
        source/decorations/RopeElement.cpp
        source/entities/items/Pistol.hpp
        source/entities/items/Pistol.cpp
        source/entities/items/Rope.cpp
        source/entities/_BaseCreature.h
        source/entities/_BaseCreature.cpp
        source/Main.cpp
        source/tiles/Level.cpp
        source/tiles/Level.hpp
        source/tiles/LevelGenerator.cpp
        source/tiles/LevelGenerator.hpp
        source/tiles/MapTile.cpp
        source/tiles/MapTile.hpp
        source/GameLoop.cpp
        source/GameLoop.hpp
        Makefile
        README.md
        source/entities/main_dude/MainDude.cpp
        source/entities/main_dude/MainDude.hpp
        source/entities/Orientation.hpp
        source/GlobalsDeclarations.hpp
        source/GameLoop.hpp
        source/tiles/Level.cpp
        source/tiles/Level.hpp
        source/tiles/LevelRenderingUtils.cpp
        source/tiles/LevelRenderingUtils.hpp
        source/tiles/MapTile.cpp
        source/tiles/MapTile.hpp
        source/collisions/Collisions.cpp
        source/collisions/Collisions.hpp
        source/hud/Hud.cpp source/hud/Hud.hpp
        source/entities/SpriteInfo.cpp
        source/entities/SpriteInfo.h
        source/camera/Camera.cpp
        source/camera/Camera.hpp
        source/memory/OamManager.cpp
        source/memory/OamManager.hpp
        source/input/InputHandler.cpp
        source/input/InputHandler.hpp
        source/entities/SpritesheetType.hpp
        source/memory/OamType.hpp
        source/entities/items/Rock.hpp
        source/entities/items/Jar.cpp
        source/entities/items/Jar.hpp
        source/entities/creatures/Snake.cpp
        source/entities/creatures/Snake.hpp
        source/tiles/MapTileType.hpp
        source/entities/animations/Blood.cpp
        source/entities/animations/Blood.hpp
        source/entities/animations/BloodElement.cpp
        source/entities/animations/BloodElement.hpp
        source/decorations/SpelunkyTitle.cpp
        source/decorations/SpelunkyTitle.h
        source/tiles/TileOrientation.hpp
        source/tiles/SplashScreenType.hpp
        source/rooms/LeftRightRooms.hpp
        source/rooms/LeftRightDownRooms.hpp
        source/rooms/LeftRightUpRooms.hpp
        source/rooms/ClosedRooms.hpp
        source/rooms/SplashScreenRooms.hpp
        source/rooms/EntranceRooms.hpp
        source/rooms/ExitRooms.hpp
        source/rooms/RoomType.hpp
        source/entities/creatures/Bat.cpp
        source/entities/creatures/Bat.hpp
        source/entities/creatures/Spider.cpp
        source/entities/creatures/Spider.hpp
        source/entities/CreatureType.hpp
        source/GlobalsDefinitions.hpp
        source/sound/SoundUtils.hpp
        source/console/ConsoleUtils.hpp
        source/time/TimeUtils.h
        source/time/TimeUtils.cpp
        source/memory/OamUtils.cpp
        source/memory/OamUtils.hpp
        source/entities/main_dude/Whip.cpp
        source/entities/main_dude/Whip.hpp
        source/entities/creatures/Spikes.cpp
        source/entities/creatures/Spikes.h
        source/entities/items/Chest.cpp
        source/entities/items/Chest.hpp
        source/entities/items/Crate.hpp
        source/entities/items/Crate.cpp
        source/entities/items/Shotgun.hpp
        source/entities/items/Shotgun.cpp
        source/entities/creatures/Bullet.hpp
        source/entities/creatures/Bullet.cpp
        source/entities/items/SpringShoes.hpp
        source/entities/items/SpringShoes.cpp
        source/entities/items/Mitt.hpp
        source/entities/items/Mitt.cpp
        source/entities/items/Glove.hpp
        source/entities/items/Glove.cpp
        source/entities/items/Compass.hpp
        source/entities/items/Compass.cpp
        source/decorations/GotCollectible.hpp
        source/decorations/GotCollectible.cpp
        source/camera/LayerLevel.hpp
        source/entities/creatures/Shopkeeper.hpp
        source/entities/creatures/Shopkeeper.cpp
        source/entities/main_dude/GameState.hpp
        source/entities/main_dude/GameState.cpp
        source/entities/creatures/Caveman.hpp
        source/entities/creatures/Caveman.cpp
        source/entities/animations/FallPoof.hpp
        source/entities/animations/FallPoof.cpp
        source/entities/items/Cape.hpp
        source/entities/items/Cape.cpp
        source/entities/items/SpikeShoes.hpp
        source/entities/items/SpikeShoes.cpp
        source/entities/items/Jetpack.hpp
        source/entities/items/Jetpack.cpp
        source/entities/animations/Flame.hpp
        source/entities/animations/FlameElement.cpp
        source/entities/animations/Flame.cpp
        source/entities/animations/FlameElement.hpp
        source/entities/creatures/Damsel.hpp
        source/entities/creatures/Damsel.cpp
        source/decorations/Smooch.hpp
        source/decorations/Smooch.cpp
        source/rooms/ShopRooms.hpp
        source/decorations/Lamp.h
        source/decorations/Lamp.cpp
        source/tiles/Direction.hpp
        source/entities/collectibles/_CollectiblesUtils.hpp
        source/entities/collectibles/_CollectiblesUtils.cpp
        source/interfaces/ShoppingObject.h
        source/decorations/ShoppingIcon.h
        source/decorations/ShoppingIcon.cpp
        source/interfaces/ShoppingObject.cpp
        source/decorations/ArrowTrap.h
        source/decorations/ArrowTrap.cpp
        source/decorations/Blast.hpp
        source/decorations/Blast.cpp
        source/rooms/SnakeWellRoom.hpp
        source/entities/creatures/Skeleton.cpp
        source/entities/creatures/Skeleton.hpp
        source/sound/SoundUtils.cpp
        source/entities/animations/Bone.hpp
        source/entities/animations/Bone.cpp
        source/entities/animations/Skull.hpp
        source/entities/animations/Skull.cpp
        source/entities/animations/FakeSkeleton.hpp
        source/entities/animations/FakeSkeleton.cpp
        source/GlobalsDefinitions.cpp
        source/BaseMap.hpp
        source/entities/SpriteUtils.cpp
        source/entities/SpriteUtils.hpp
        source/tiles/LevelGenerator.hpp
        source/tiles/LevelGenerator.cpp
        source/tiles/PopulatingUtils.hpp
        source/tiles/PopulatingUtils.cpp
        source/entities/treasures/RubyBig.h
        source/entities/treasures/RubySmall.h
        source/entities/treasures/TripleGoldbar.h
        source/entities/treasures/TripleGoldbar.cpp
        source/entities/treasures/SingleGoldbar.hpp
        source/entities/treasures/SingleGoldbar.cpp
        source/entities/treasures/RubySmall.cpp
        source/entities/treasures/RubyBig.cpp
        source/collisions/CollisionsUtils.h
        source/collisions/CollisionsUtils.cpp
        source/decorations/_BaseDecoration.h
        source/decorations/RockSign.h
        source/decorations/RockSign.cpp
        source/decorations/ArchSign.h
        source/decorations/ArchSign.cpp
        source/interfaces/IRenderable.cpp
        source/interfaces/IRenderable.h
        source/interfaces/ICollidable.cpp
        source/interfaces/ICollidable.h
        source/interfaces/IBase.cpp
        source/interfaces/IBase.h
        source/entities/treasures/_BaseTreasure.cpp source/entities/treasures/_BaseTreasure.h source/entities/items/_BaseItem.cpp source/entities/items/_BaseItem.h source/interfaces/IPickupable.cpp source/interfaces/IPickupable.h)
