# That file is here only to make IDE's happy so they could index all source files.
# Real building happens through Makefile.

cmake_minimum_required(VERSION 3.9)
project(spelunkyds)

set(CMAKE_CXX_STANDARD 14)

# Set to your devkitPro's installation dir if environment variable does not exist.
set(DEVKITPRO $ENV{DEVKITPRO})

include_directories(${DEVKITPRO}/libnds/lib)
include_directories(${DEVKITPRO}/libnds/include)
include_directories(${DEVKITPRO}/libnds/include/nds)
include_directories(${DEVKITPRO}/libnds/include/nds/arm9)
include_directories(${DEVKITPRO}/devkitARM)

link_directories(${DEVKITPRO}/libnds/lib)
link_directories(${DEVKITPRO}/libnds/include)
link_directories(${DEVKITPRO}/libnds/include/nds)
link_directories(${DEVKITPRO}/libnds/include/nds/arm9)

add_executable(spelunkyds
        gfx/fonts/font.grit
        gfx/sprites/16x16/sprite.grit
        source/preprocessor/Debug.h
        source/entities/decorations/_BaseDecoration.h
        source/entities/main_dude/MainDude.cpp
        source/entities/main_dude/MainDude.hpp
        source/entities/items/Bomb.cpp
        source/entities/items/Rock.cpp
        source/entities/items/Arrow.cpp
        source/entities/items/Bomb.hpp
        source/entities/items/Rope.hpp
        source/entities/decorations/Copyrights.cpp
        source/entities/decorations/Copyrights.h
        source/entities/decorations/RopeElement.hpp
        source/entities/decorations/RopeElement.cpp
        source/entities/items/Pistol.hpp
        source/entities/items/Pistol.cpp
        source/entities/items/Rope.cpp
        source/entities/creatures/_BaseCreature.h
        source/entities/creatures/_BaseCreature.cpp
        source/Main.cpp
        source/tiles/Level.cpp
        source/tiles/Level.hpp
        source/tiles/LevelGenerator.cpp
        source/tiles/LevelGenerator.hpp
        source/tiles/MapTile.cpp
        source/tiles/MapTile.hpp
        source/GameLoop.cpp
        source/GameLoop.hpp
        source/entities/main_dude/MainDudeConsts.h
        source/entities/main_dude/MainDude.cpp
        source/entities/main_dude/MainDude.hpp
        source/entities/_common/Orientation.hpp
        source/GlobalsDeclarations.hpp
        source/GameLoop.hpp
        source/tiles/Level.cpp
        source/tiles/Level.hpp
        source/tiles/LevelRenderingUtils.cpp
        source/tiles/LevelRenderingUtils.hpp
        source/tiles/MapTile.cpp
        source/tiles/MapTile.hpp
        source/collisions/Collisions.cpp
        source/collisions/Collisions.hpp
        source/hud/Hud.cpp source/hud/Hud.hpp
        source/memory/SpriteInfo.cpp
        source/memory/SpriteInfo.h
        source/camera/Camera.cpp
        source/camera/Camera.hpp
        source/memory/OamManager.cpp
        source/memory/OamManager.hpp
        source/input/InputHandler.cpp
        source/input/InputHandler.hpp
        source/memory/SpritesheetType.hpp
        source/memory/OamType.hpp
        source/entities/items/Rock.hpp
        source/entities/items/Jar.cpp
        source/entities/items/Jar.hpp
        source/entities/creatures/Snake.cpp
        source/entities/creatures/Snake.hpp
        source/tiles/MapTileType.hpp
        source/entities/animations/Blood.cpp
        source/entities/animations/Blood.hpp
        source/entities/animations/BloodElement.cpp
        source/entities/animations/BloodElement.hpp
        source/entities/decorations/SpelunkyTitle.cpp
        source/entities/decorations/SpelunkyTitle.h
        source/tiles/TileOrientation.hpp
        source/tiles/SplashScreenType.hpp
        source/rooms/LeftRightRooms.hpp
        source/rooms/LeftRightDownRooms.hpp
        source/rooms/LeftRightUpRooms.hpp
        source/rooms/ClosedRooms.hpp
        source/rooms/SplashScreenRooms.hpp
        source/rooms/EntranceRooms.hpp
        source/rooms/ExitRooms.hpp
        source/rooms/RoomType.hpp
        source/entities/creatures/Bat.cpp
        source/entities/creatures/Bat.hpp
        source/entities/creatures/Spider.cpp
        source/entities/creatures/Spider.hpp
        source/entities/creatures/CreatureType.hpp
        source/GlobalsDefinitions.hpp
        source/sound/SoundUtils.hpp
        source/console/ConsoleUtils.hpp
        source/time/TimeUtils.h
        source/time/TimeUtils.cpp
        source/memory/OamUtils.cpp
        source/memory/OamUtils.hpp
        source/entities/main_dude/Whip.cpp
        source/entities/main_dude/Whip.hpp
        source/entities/creatures/Spikes.cpp
        source/entities/creatures/Spikes.h
        source/entities/items/Chest.cpp
        source/entities/items/Chest.hpp
        source/entities/items/Crate.hpp
        source/entities/items/Crate.cpp
        source/entities/items/Shotgun.hpp
        source/entities/items/Shotgun.cpp
        source/entities/creatures/Bullet.hpp
        source/entities/creatures/Bullet.cpp
        source/entities/items/SpringShoes.hpp
        source/entities/items/SpringShoes.cpp
        source/entities/items/Mitt.hpp
        source/entities/items/Mitt.cpp
        source/entities/items/Glove.hpp
        source/entities/items/Glove.cpp
        source/entities/items/Compass.hpp
        source/entities/items/Compass.cpp
        source/entities/decorations/GotCollectible.hpp
        source/entities/decorations/GotCollectible.cpp
        source/camera/LayerLevel.hpp
        source/entities/creatures/Shopkeeper.hpp
        source/entities/creatures/Shopkeeper.cpp
        source/entities/main_dude/GameState.hpp
        source/entities/main_dude/GameState.cpp
        source/entities/creatures/Caveman.hpp
        source/entities/creatures/Caveman.cpp
        source/entities/animations/FallPoof.hpp
        source/entities/animations/FallPoof.cpp
        source/entities/items/Cape.hpp
        source/entities/items/Cape.cpp
        source/entities/items/SpikeShoes.hpp
        source/entities/items/SpikeShoes.cpp
        source/entities/items/Jetpack.hpp
        source/entities/items/Jetpack.cpp
        source/entities/animations/Flame.hpp
        source/entities/animations/FlameElement.cpp
        source/entities/animations/Flame.cpp
        source/entities/animations/FlameElement.hpp
        source/entities/creatures/Damsel.hpp
        source/entities/creatures/Damsel.cpp
        source/entities/decorations/Smooch.hpp
        source/entities/decorations/Smooch.cpp
        source/rooms/ShopRooms.hpp
        source/entities/decorations/Lamp.h
        source/entities/decorations/Lamp.cpp
        source/tiles/Direction.hpp
        source/entities/items/_ItemsUtils.hpp
        source/entities/items/_ItemsUtils.cpp
        source/entities/_interfaces/ShoppingObject.h
        source/entities/decorations/ShoppingIcon.h
        source/entities/decorations/ShoppingIcon.cpp
        source/entities/_interfaces/ShoppingObject.cpp
        source/entities/decorations/ArrowTrap.h
        source/entities/decorations/ArrowTrap.cpp
        source/entities/decorations/Blast.hpp
        source/entities/decorations/Blast.cpp
        source/rooms/SnakeWellRoom.hpp
        source/entities/creatures/Skeleton.cpp
        source/entities/creatures/Skeleton.hpp
        source/sound/SoundUtils.cpp
        source/entities/animations/Bone.hpp
        source/entities/animations/Bone.cpp
        source/entities/items/Skull.hpp
        source/entities/items/Skull.cpp
        source/entities/animations/FakeSkeleton.hpp
        source/entities/animations/FakeSkeleton.cpp
        source/GlobalsDefinitions.cpp
        source/BaseMap.hpp
        source/memory/SpriteUtils.cpp
        source/memory/SpriteUtils.hpp
        source/tiles/LevelGenerator.hpp
        source/tiles/LevelGenerator.cpp
        source/tiles/PopulatingUtils.hpp
        source/tiles/PopulatingUtils.cpp
        source/entities/treasures/RubyBig.h
        source/entities/treasures/RubySmall.h
        source/entities/treasures/TripleGoldbar.h
        source/entities/treasures/TripleGoldbar.cpp
        source/entities/treasures/SingleGoldbar.hpp
        source/entities/treasures/SingleGoldbar.cpp
        source/entities/treasures/RubySmall.cpp
        source/entities/treasures/RubyBig.cpp
        source/collisions/CollisionsUtils.h
        source/collisions/CollisionsUtils.cpp
        source/entities/decorations/_BaseDecoration.h
        source/entities/decorations/RockSign.h
        source/entities/decorations/RockSign.cpp
        source/entities/decorations/ArchSign.h
        source/entities/decorations/ArchSign.cpp
        source/entities/_interfaces/IRenderable.cpp
        source/entities/_interfaces/IRenderable.h
        source/entities/_interfaces/ICollidable.cpp
        source/entities/_interfaces/ICollidable.h
        source/entities/_interfaces/IBase.cpp
        source/entities/_interfaces/IBase.h
        source/entities/treasures/_BaseTreasure.cpp
        source/entities/treasures/_BaseTreasure.h
        source/entities/items/_BaseItem.cppsource/entities/items/_BaseItem.h
        source/entities/_interfaces/IPickupable.cpp
        source/entities/_interfaces/IPickupable.h
        source/entities/decorations/Explosion.cpp
        source/entities/decorations/Explosion.h
        source/entities/items/GoldenIdol.cpp
        source/entities/items/GoldenIdol.h
        source/entities/creatures/Boulder.cpp
        source/entities/creatures/Boulder.h
        )
